--- a/Intro.ipynb
+++ b/Intro.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOm/I6lrRnR2cnr34/Q62Rd",
+      "authorship_tag": "ABX9TyN2eyz5fg/OUkdBTfeT67ic",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,25 +28,248 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 12,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 223
         },
         "id": "fu4E9_ZDaxH2",
-        "outputId": "6a5cd197-a097-428a-b4e0-d37566783dc5"
+        "outputId": "339bc630-21fa-4e20-9c76-c86b0036e2b5"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "44\n"
+            "hello ML \n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "  size  color  gender  price  weight bought\n",
+              "0   XL    red  female  199.0     500    yes\n",
+              "1    L  green    male   89.0     450     no\n",
+              "2    M   blue    male   99.0     300    yes\n",
+              "3    L  green  female  129.0     380     no\n",
+              "4    M    red  female   79.0     410    yes"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-d65e2209-da37-49cb-8ef0-fbdf072acece\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>size</th>\n",
+              "      <th>color</th>\n",
+              "      <th>gender</th>\n",
+              "      <th>price</th>\n",
+              "      <th>weight</th>\n",
+              "      <th>bought</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>XL</td>\n",
+              "      <td>red</td>\n",
+              "      <td>female</td>\n",
+              "      <td>199.0</td>\n",
+              "      <td>500</td>\n",
+              "      <td>yes</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>L</td>\n",
+              "      <td>green</td>\n",
+              "      <td>male</td>\n",
+              "      <td>89.0</td>\n",
+              "      <td>450</td>\n",
+              "      <td>no</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>M</td>\n",
+              "      <td>blue</td>\n",
+              "      <td>male</td>\n",
+              "      <td>99.0</td>\n",
+              "      <td>300</td>\n",
+              "      <td>yes</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>L</td>\n",
+              "      <td>green</td>\n",
+              "      <td>female</td>\n",
+              "      <td>129.0</td>\n",
+              "      <td>380</td>\n",
+              "      <td>no</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>M</td>\n",
+              "      <td>red</td>\n",
+              "      <td>female</td>\n",
+              "      <td>79.0</td>\n",
+              "      <td>410</td>\n",
+              "      <td>yes</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d65e2209-da37-49cb-8ef0-fbdf072acece')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-d65e2209-da37-49cb-8ef0-fbdf072acece button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-d65e2209-da37-49cb-8ef0-fbdf072acece');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
         }
       ],
       "source": [
-        "print(\"44\")\n"
+        "print(\"hello ML \")\n",
+        "import sklearn\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
+        "sklearn.__version__\n",
+        "data = {\n",
+        "    'size': ['XL', 'L', 'M', 'L', 'M'],\n",
+        "    'color': ['red', 'green', 'blue', 'green', 'red'],\n",
+        "    'gender': ['female', 'male', 'male', 'female', 'female'],\n",
+        "    'price': [199.0, 89.0, 99.0, 129.0, 79.0],\n",
+        "    'weight': [500, 450, 300, 380, 410],\n",
+        "    'bought': ['yes', 'no', 'yes', 'no', 'yes']\n",
+        "}\n",
+        "\n",
+        "df_raw = pd.DataFrame(data=data)\n",
+        "df_raw\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_raw.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mEn3uqhTK8cI",
+        "outputId": "cc854fc6-4715-4703-8d8c-005cab3de4ad"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 5 entries, 0 to 4\n",
+            "Data columns (total 6 columns):\n",
+            " #   Column  Non-Null Count  Dtype  \n",
+            "---  ------  --------------  -----  \n",
+            " 0   size    5 non-null      object \n",
+            " 1   color   5 non-null      object \n",
+            " 2   gender  5 non-null      object \n",
+            " 3   price   5 non-null      float64\n",
+            " 4   weight  5 non-null      int64  \n",
+            " 5   bought  5 non-null      object \n",
+            "dtypes: float64(1), int64(1), object(4)\n",
+            "memory usage: 368.0+ bytes\n"
+          ]
+        }
       ]
     }
   ]
